--- a/doc/css_market.mdwn
+++ b/doc/css_market.mdwn
@@ -26,6 +26,6 @@ You can see it [here](http://fred.ccheznous.org). You can download the local.css
 the modified templates [here](http://fred.ccheznous.org/refresh_20060602.tgz).
 
 If your web browser allows selecting between multiple stylesheets, this
-page can be viewed using any of the stylesheets above. For example, if
+page can be viewed using many of the stylesheets above. For example, if
 using Epiphany with the Select Stylesheet extension enabled, use View ->
 Style.  In Firefox or Iceweasel, use View -> Page Style.
