--- a/debian/changelog
+++ b/debian/changelog
@@ -32,8 +32,10 @@ ikiwiki (2.2) UNRELEASED; urgency=low
     in a PageSpec.
   * Explode some of the more insane regexps.
   * Add test suite for preprocessor directive parsing.
+  * Fix wrapper generator and untaint code's handling of strings contining
+    newlines.
 
- -- Joey Hess <joeyh@debian.org>  Sat, 02 Jun 2007 01:03:37 -0400
+ -- Joey Hess <joeyh@debian.org>  Sun, 03 Jun 2007 12:20:26 -0400
 
 ikiwiki (2.1) unstable; urgency=low
 
