--- a/debian/changelog
+++ b/debian/changelog
@@ -34,8 +34,9 @@ ikiwiki (2.2) UNRELEASED; urgency=low
   * Add test suite for preprocessor directive parsing.
   * Fix wrapper generator and untaint code's handling of strings contining
     newlines.
+  * Make the url absolution code for feeds significantly more robust.
 
- -- Joey Hess <joeyh@debian.org>  Sun, 03 Jun 2007 12:20:26 -0400
+ -- Joey Hess <joeyh@debian.org>  Sun, 03 Jun 2007 13:10:08 -0400
 
 ikiwiki (2.1) unstable; urgency=low
 
