make explicit that these plugins are included in ikiwiki

--- a/doc/plugins.mdwn
+++ b/doc/plugins.mdwn
@@ -1,4 +1,5 @@
-Most of ikiwiki's [[features]] are implemented as plugins.
+Most of ikiwiki's [[features]] are implemented as plugins. Many of these 
+plugins are included with ikiwiki.
 
 [[pagestats pages="plugins/type/* and !plugins/type/slow"]]
 
