--- a/debian/changelog
+++ b/debian/changelog
@@ -35,8 +35,9 @@ ikiwiki (2.2) UNRELEASED; urgency=low
   * Fix wrapper generator and untaint code's handling of strings contining
     newlines.
   * Make the url absolution code for feeds significantly more robust.
+  * Add typographyattributes configuration setting to typography plugin.
 
- -- Joey Hess <joeyh@debian.org>  Sun, 03 Jun 2007 13:10:08 -0400
+ -- Joey Hess <joeyh@debian.org>  Tue, 05 Jun 2007 15:03:48 -0400
 
 ikiwiki (2.1) unstable; urgency=low
 
