--- a/doc/plugins/typography.mdwn
+++ b/doc/plugins/typography.mdwn
@@ -6,3 +6,7 @@ This plugin, also known as
 plain ASCII punctuation characters into ``smart'' typographic punctuation HTML
 entities. To use it, you need to have the [[cpan Text::Typography]] module
 installed.
+
+This plugin has a configuration option. To change the attributes,
+set `--typographyattributes=whatever`. See the documentation for
+[[cpan Text::Typography]] for available attributes.
