web commit by harleypig

--- a/doc/todo/plugin.mdwn
+++ b/doc/todo/plugin.mdwn
@@ -20,6 +20,7 @@ Suggestions of ideas for plugins:
 > Or just link to the equivalent in the version control system, if available;
 > gitweb's shortlog or summary view would work nicely as a
 > RecentChanges. --[[JoshTriplett]]
+>>Why not fork the process?  We wouldn't have to wait around for a response since we would assume the recent changes page was being generated correctly.
 
 * It would be nice to be able to have a button to show "Differences" (or 
   "Show Diff") when editing a page. Is that an option that can be enabled?
