--- a/doc/features.mdwn
+++ b/doc/features.mdwn
@@ -4,7 +4,7 @@ An overview of some of ikiwiki's features:
 ## Uses a real RCS
 
 Rather than implement its own system for storing page histories etc,
-ikiwiki uses a real Revision Control System. This isn't because we're
+ikiwiki uses a real Revision Control System. This isn't (just) because we're
 lazy, it's because a real RCS is a good thing to have, and there are
 advantages to using one that are not possible with a standard wiki.
 
