web commit by http://victormoral.myopenid.com/: version 0.6

--- a/doc/plugins/contrib/sar___40__third_party_plugin__41__.mdwn
+++ b/doc/plugins/contrib/sar___40__third_party_plugin__41__.mdwn
@@ -89,9 +89,14 @@ to disable the sar plugin in the current page for the term `hp`.
 
 ## Changelog
 
+### version 0.6
+
+- Minor bugfixes in the pages selection.
+- Call to add_depends() for every page filtered
+
 ### version 0.5
 
-This is the first functional version.
+- This is the first functional version.
 
 ## Download 
 
