web commit by http://victormoral.myopenid.com/: bad news about the plugin. i discourage his use

--- a/doc/plugins/contrib/sar___40__third_party_plugin__41__.mdwn
+++ b/doc/plugins/contrib/sar___40__third_party_plugin__41__.mdwn
@@ -2,6 +2,8 @@
 [[template id=plugin name=sar author="[[VictorMoral]]"]]
 [[tag type/chrome type/slow ]]
 
+>__Warning__: i'm using this plugin at my site and i have found too much problems with him. I discourage his use until a new version has been released. My apologies for the inconveniences. I think that is a good idea with a bad initial design.
+
 The `sar` plugin is useful to make global or local search and replace operations
 using common or specific terms.
 
