--- a/doc/plugins/write.mdwn
+++ b/doc/plugins/write.mdwn
@@ -389,7 +389,7 @@ A failure to write the file will result in it dying with an error.
 
 If the destination directory doesn't exist, it will first be created.
 
-### `will_render($$)`
+#### `will_render($$)`
 
 Given a page name and a destination file name (not including the base
 destination directory), register that the page will result in that file
