add freebsd port

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ikiwiki (2.2) UNRELEASED; urgency=low
+ikiwiki (2.2) unstable; urgency=low
 
   * Change the aggregate plugin's locking strategy. Now it defers loading state
     until the wiki is building and already locked, unless it's aggregating.
@@ -37,7 +37,7 @@ ikiwiki (2.2) UNRELEASED; urgency=low
   * Make the url absolution code for feeds significantly more robust.
   * Add typographyattributes configuration setting to typography plugin.
 
- -- Joey Hess <joeyh@debian.org>  Tue, 05 Jun 2007 15:03:48 -0400
+ -- Joey Hess <joeyh@debian.org>  Mon, 18 Jun 2007 21:21:56 +0100
 
 ikiwiki (2.1) unstable; urgency=low
 
