--- a/doc/download.mdwn
+++ b/doc/download.mdwn
@@ -25,6 +25,9 @@ to upgrade to a newer version of libcgi-formbuilder-perl, `3.05`.
 There is also an unofficial backport of ikiwiki for Debian 'sarge', provided by
 Pawel Tecza, at <http://gpa.net.icm.edu.pl/debian/>.
 
+Also. FreeBSD has ikiwiki in its
+[ports collection](http://www.freshports.org/www/ikiwiki/).
+
 # revision control
 
 ## subversion
