* Corrected a typo in an error handler in the image plugin.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ikiwiki (2.3) UNRELEASED; urgency=low
+
+  * Corrected a typo in an error handler in the image plugin.
+
+ -- Joey Hess <joeyh@debian.org>  Tue, 19 Jun 2007 19:46:21 +0100
+
 ikiwiki (2.2) unstable; urgency=low
 
   * Change the aggregate plugin's locking strategy. Now it defers loading state
