--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,12 @@
 ikiwiki (2.3) UNRELEASED; urgency=low
 
   * Corrected a typo in an error handler in the image plugin.
+  * Allow svnpath config option to contain additional extra slashes anywhere
+    w/o confusing ikiwiki.
+  * Rcs modules are now imported, so other modules that need similar
+    normalisation of configs etc can do so.
 
- -- Joey Hess <joeyh@debian.org>  Tue, 19 Jun 2007 19:46:21 +0100
+ -- Joey Hess <joeyh@debian.org>  Sat, 23 Jun 2007 13:10:06 +0100
 
 ikiwiki (2.2) unstable; urgency=low
 
