web commit by http://liw.iki.fi/liw/: Added the two Braawi sites, both done with IkiWiki

--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -14,6 +14,7 @@ Projects
 * The [linuxbierwanderung wiki/homepage](http://www.linuxbierwanderung.org)
 * The [Relativistic Programming research wiki](http://wiki.cs.pdx.edu/rp).
 * [Debian-IN](http://debian-in.alioth.debian.org/)
+* [Braawi Ltd](http://braawi.com/) and the community site [Braawi.org](http://braawi.org/)
 
 Personal sites and blogs
 ========================
