* Patch fixing various additional problems with test suite. Closes: #425891   once more.

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,8 +5,10 @@ ikiwiki (2.3) UNRELEASED; urgency=low
     w/o confusing ikiwiki.
   * Rcs modules are now imported, so other modules that need similar
     normalisation of configs etc can do so.
+  * Patch fixing various additional problems with test suite. Closes: #425891
+    once more.
 
- -- Joey Hess <joeyh@debian.org>  Sat, 23 Jun 2007 13:10:06 +0100
+ -- Joey Hess <joeyh@debian.org>  Tue, 26 Jun 2007 18:08:24 -0400
 
 ikiwiki (2.2) unstable; urgency=low
 
