--- a/doc/bugs/tbasewiki__95__brokenlinks.t_broken.mdwn
+++ b/doc/bugs/tbasewiki__95__brokenlinks.t_broken.mdwn
@@ -56,3 +56,5 @@ Other than ikiwiki.in, am I missing something here?
 >> I think this is [debbug 425891]. I have sent there a patch that incorporates the original
 >> author's two diffs but has a more correct solution to the first problem described 
 >> above. -- Thomas, 2007-06-26
+
+[[done]]
