web commit by http://hendry.myopenid.com/

--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -15,6 +15,7 @@ Projects
 * The [Relativistic Programming research wiki](http://wiki.cs.pdx.edu/rp).
 * [Debian-IN](http://debian-in.alioth.debian.org/)
 * [Braawi Ltd](http://braawi.com/) and the community site [Braawi.org](http://braawi.org/)
+* [Webconverger.org](http://webconverger.org/)
 
 Personal sites and blogs
 ========================
