--- a/debian/changelog
+++ b/debian/changelog
@@ -7,8 +7,9 @@ ikiwiki (2.3) UNRELEASED; urgency=low
     normalisation of configs etc can do so.
   * Patch fixing various additional problems with test suite. Closes: #425891
     once more.
+  * French update from Jean-Luc Coulon. Closes: #430771
 
- -- Joey Hess <joeyh@debian.org>  Tue, 26 Jun 2007 18:08:24 -0400
+ -- Joey Hess <joeyh@debian.org>  Thu, 28 Jun 2007 13:46:56 -0400
 
 ikiwiki (2.2) unstable; urgency=low
 
