web commit by HolgerLevsen: thanks a swarm of fish for ikiwiki! :)

--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -16,6 +16,7 @@ Projects
 * [Debian-IN](http://debian-in.alioth.debian.org/)
 * [Braawi Ltd](http://braawi.com/) and the community site [Braawi.org](http://braawi.org/)
 * [Webconverger.org](http://webconverger.org/)
+* [debian-community.org](http://debian-community.org/)
 
 Personal sites and blogs
 ========================
@@ -62,6 +63,7 @@ Personal sites and blogs
   [asciidoc plugin](http://mowson.org/karl/colophon/).
 * [Carl Worth's Boring Web Pages](http://www.cworth.org)
 * [Charles Mauch](http://xtermin.us)'s website uses ikiwiki.
+* I keep my personal and project notes in a private ikiwiki - it's the perfect tool for this task. - [h01ger](http://layer-acht.org/)
 
 Please feel free to add your own ikiwiki site!
 
