--- a/doc/freesoftware.mdwn
+++ b/doc/freesoftware.mdwn
@@ -4,6 +4,7 @@ ikiwiki is licensed under the terms of the GNU [[GPL]], version 2 or later.
 
 The parts of ikiwiki that become part of your own wiki (the [[basewiki]]
 pages (but not the smilies) and the [[templates|wikitemplates]], but not
-the smiley icons) are licensed as follows: Redistribution and use in source
-and compiled forms, with or without modification, are permitted under any
-circumstances. No warranty.
+the smiley icons) are licensed as follows: 
+
+> Redistribution and use in source and compiled forms, with or without
+> modification, are permitted under any circumstances. No warranty.
