--- a/doc/index/discussion.mdwn
+++ b/doc/index/discussion.mdwn
@@ -163,3 +163,17 @@ Any tool to edit the user database?
 > I've not written actual utilities to do this yet because I've only needed
 > to do it rarely, and the data I've wanted has been different each time.
 > --[[Joey]]
+
+----
+
+# Spaces in WikiLinks?
+
+Hello Joey,
+
+I've just switched from ikiwiki 2.0 to ikiwiki 2.2 and I'm really surprised
+that I can't use the spaces in WikiLinks. Could you please tell me why the spaces
+aren't allowed in WikiLinks now?
+
+My best regards,
+
+--Pawel
