web commit by http://mwjames.myopenid.com/: Howto build ikiwiki in OpenSolaris?

--- a/doc/index/discussion.mdwn
+++ b/doc/index/discussion.mdwn
@@ -177,3 +177,31 @@ aren't allowed in WikiLinks now?
 My best regards,
 
 --Pawel
+
+----
+
+# Build in OpenSolaris?
+
+I've learned I'm not yet clever enough to get IkiWiki to build in OpenSolaris (as running on a [Joyent Accelerator][ja]). Anyone figured this out already?
+
+I think problem lies mostly, if not entirely, in getting ikiwiki.cgi.c to compile in an OpenSolaris context (this is ikiwiki-2.2):
+
+> <code>$ ikiwiki --setup ~/etc/ikiwiki/ikiwiki-edit.setup  
+> [...]  
+> Error: failed to compile /home/username/domains/domain.tld/cgi-bin/ikiwiki.cgi.c at /opt/local/lib/perl5/site_perl/IkiWiki.pm line 104.
+BEGIN failed--compilation aborted at (eval 3) line 145.</code>
+
+More specifically, 
+
+> <code>$ /usr/sfw/bin/gcc ikiwiki.cgi.c  
+> Undefined               first referenced  
+> symbol                     in file  
+> asprintf                   /var/tmp//cczPaG7R.o  
+> ld: fatal: Symbol referencing errors. No output written to a.out  
+> collect2: ld returned 1 exit status</code>
+
+[ja]: <http://www.joyent.com/accelerator/technical-specifications/>
+
+Thanks, Joey et al., for a really cool tool.
+
+--Mike
