web commit by http://xtermin.us/: sitemaps plugin

--- a/doc/todo/Google_Sitemap_protocol.mdwn
+++ b/doc/todo/Google_Sitemap_protocol.mdwn
@@ -18,3 +18,12 @@ about having such pages not found by web spiders.
 While pages are very interlinked, most people use ikiwiki for blogging. Blogging produces pages at random intervals and google apparently optimizes their crawls to fit the frequency of changes. For me it's not so often that the contents of my blog changes, so google indexes it quite infrequently. Sitemaps are polled more often than other content (if one exists) so it's lighter for the site and for search engines (yes, google) to frequently poll it instead. So it's not that pages can't be found, but it's lighter for the site to keep an up to date index.
 
 -- Sami
+
+> I've written a sitemaps plugin for my own use.  With a little tweaking it
+> should be usable for others.  See [my git
+repo](http://localhost/git/?p=website.git;a=blob;f=plugins/googlesitemap.pm)
+for an example.  You will probably need to strip out the metadata variables I
+> gather, and tweak to generate proper priorities.  The code is pretty simple
+> though and self-explanatory.
+>
+> -- CharlesMauch
