--- a/doc/todo/Google_Sitemap_protocol.mdwn
+++ b/doc/todo/Google_Sitemap_protocol.mdwn
@@ -27,3 +27,6 @@ for an example.  You will probably need to strip out the metadata variables I
 > though and self-explanatory.
 >
 > -- CharlesMauch
+
+>> presumably you really mean [xtermin.us rather than localhost](http://xtermin.us/git/?p=website.git;a=blob;f=plugins/googlesitemap.pm)
+>> -- [[KarlMW]]
