web commit by http://xtermin.us/: another link typo, i need to use preview more ;)

--- a/doc/todo/recentchanges.mdwn
+++ b/doc/todo/recentchanges.mdwn
@@ -77,7 +77,7 @@ your pages. --Ethan
 > Seitz](http://webseitz.fluxent.com/wiki/FrontPage) as an recentchanges
 > format.  Note how he uses some clever css to show changes in different
 > sections of the website.  I modeled my own
-> [recentchanges](http://xtermin.us/recentchange) page page on his ideas.  This
+> [recentchanges](http://xtermin.us/recentchanges) page page on his ideas.  This
 > probably isn't appropriate for non-WikiLog style setups, but is this
 > something closer to what you what was requested?
 >
