web commit by cworth

--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -17,6 +17,7 @@ Projects
 * [Braawi Ltd](http://braawi.com/) and the community site [Braawi.org](http://braawi.org/)
 * [Webconverger.org](http://webconverger.org/)
 * [debian-community.org](http://debian-community.org/)
+* The [cairo graphics library](http://cairographics.org/) website.
 
 Personal sites and blogs
 ========================
