--- a/doc/patchqueue/Gallery_Plugin_for_Ikiwiki.mdwn
+++ b/doc/patchqueue/Gallery_Plugin_for_Ikiwiki.mdwn
@@ -1,6 +1,6 @@
 I have implemented the first version of the Gallery Plugin for Ikiwiki as part of [[soc]]. This plugin would create a nice looking gallery of the images once the directory containing images is specified with some additional parameters. It has been build over the img plugin. 
 
-Plugin can be downloaded from [here](http://www.arpitjain.com/gallery.tar). 
+Plugin can be downloaded from [here](http://myweb.unomaha.edu/~ajain/gallery.tar). 
 
 It can be used as : <br>
 \[[gallery imagedir="images" thumbnailsize="200x200" cols="3" alt="Can not be displayed" title="My Pictures"]]
@@ -21,4 +21,4 @@ Features of the Gallery Plugin:<br>
 Right now, it features only one template namely [Lightbox](http://www.hudddletogether.com). Later on, I will add few more templates.<br>
 For any feedback or query, feel free to mail me at arpitjain11 [AT] gmail.com 
 
-Additional details are available [here](http://www.arpitjain.com/ikiwikigallery.html).
+Additional details are available [here](http://myweb.unomaha.edu/~ajain/ikiwikigallery.html).
