--- a/doc/todo/Account-creation_password.mdwn
+++ b/doc/todo/Account-creation_password.mdwn
@@ -3,4 +3,4 @@ simplistic anti-spam measure.  (Some wikis edited by a particular group use an
 account creation password as an "ask an existing member to get an account"
 system.) --[[JoshTriplett]]
 
-[[bugs/done]] --[[JoshTriplett]]
+[[todo/done]] --[[JoshTriplett]]
