web commit by http://arpitjain11.myopenid.com/

--- a/doc/users/arpitjain.mdwn
+++ b/doc/users/arpitjain.mdwn
@@ -1,7 +1,7 @@
 [[meta title="Arpit Jain"]]
+Hi, 
 
-This is Arpit Jain. 
-Currently doing B.Tech/M.Tech in Computer Science and Engg. from IIT Kharagpur. 
+I am Arpit Jain. I am final year student of Department of Computer Science and Engineering at Indian Institute of Technology, Kharagpur. 
 I would be working on [[todo/Gallery]] project for ikiwiki this summers. 
 
 More info about me can be found at <http://www.arpitjain.com>.
