--- a/doc/bugs.mdwn
+++ b/doc/bugs.mdwn
@@ -5,3 +5,23 @@ Also see the [Debian bugs](http://bugs.debian.org/ikiwiki).
 [[inline pages="bugs/* and !bugs/done and !link(bugs/done) and !bugs/*/*"
 feedpages="created_after(bugs/no_commit_mails_for_new_pages)"
 actions=yes rootpage="bugs" postformtext="Add a new bug titled:" show=0]]
+
+
+----
+
+* list item 1
+* list item 2
+* list item 3
+
+1. First item.
+1. Sub item.
+1. Another.
+1. And another..
+
+Not sure whether this is a bug or a case of RTFM.
+Anyway, unexpected. Trying my first install of ikiwiki,
+reading through the quick setup, trying out the given
+examples and finding half of them to behave oddly is not
+encouraging.
+
+----
