web commit by http://victormoral.myopenid.com/: errata

--- a/doc/plugins/contrib/sar___40__third_party_plugin__41__.mdwn
+++ b/doc/plugins/contrib/sar___40__third_party_plugin__41__.mdwn
@@ -47,8 +47,7 @@ After a filter operation the content is:
 
     _IkiWiki_ es un buen software.
 
->Disclaimer: I chose this syntax because don't clashes with markdown and it is
->easy to write. 
+_Note_: I chose this syntax because don't clashes with markdown and it is easy to write. 
 
 A _search and replace_ directive has the following parameters:
 
