web commit by http://hendry.myopenid.com/

--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -18,6 +18,7 @@ Projects
 * [Webconverger.org](http://webconverger.org/)
 * [debian-community.org](http://debian-community.org/)
 * The [cairo graphics library](http://cairographics.org/) website.
+* [Nouvelles Informations Positives Libres community](http://wiki.nipl.net/)
 
 Personal sites and blogs
 ========================
